# activity-normalizer

./: .env.example  .gitignore  README.md  main.py  models.py  pyproject.toml  synchronizer.py
clients/: garmin_client.py  intervals_client.py  rwgps_client.py
reference/: intervals_icu_openapi_spec.json  ridewithgps_openapi.yaml
tests/: test_models.py
userscripts/: garmin-connect-normalize.user.json
