[project]
name = "activity-normalizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "curl-cffi>=0.15.0",
    "garminconnect>=0.3.1",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.uv.sources]
garminconnect = { git = "https://github.com/lipov3cz3k/python-garminconnect.git", rev = "feat/chrome110-impersonate" }
